# newsscreener

./: .dockerignore  .gitignore  Dockerfile  README.md  START_HERE.md  docker-compose.yml  pyproject.toml
config/: .env.example  settings.py
docs/: API.md  COMPLETE.md  IMPLEMENTATION.md  README.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js
frontend/src/components/: AlertConfig.jsx  ArticleCard.jsx  ArticleDetail.jsx  ArticleFeed.jsx  FilterSidebar.jsx  KeywordTrends.jsx  MacroCalendar.jsx  SectorHeatmap.jsx  SourceLeaderboard.jsx  StatsBar.jsx
frontend/src/hooks/: useWebSocket.js
scripts/: dev.sh  docker-up.sh  run.sh  setup-and-run.sh
src/: app.py  logging.py  models.py  redis_pubsub.py
src/api/: __init__.py  alerts.py  analytics.py  macro_calendar.py  polygon_news.py  price_impact.py  routes.py  websocket.py
src/db/: __init__.py  database.py  models.py  persistence.py  repository.py
src/enrichment/: __init__.py  classifier.py  credibility.py  pipeline.py  sentiment.py  summarizer.py
src/ingestion/: __init__.py  pipeline.py  polygon_ws.py  scraper.py
tests/: conftest.py  test_api_routes.py  test_classifier.py  test_credibility.py  test_database.py  test_enrichment_pipeline.py  test_models.py  test_persistence.py  test_polygon_ws.py  test_redis_pubsub.py  test_scraper.py  test_sentiment.py  test_summarizer.py  test_websocket.py
