[project]
name = "news-screener"
version = "0.1.0"
description = "Financial news screener with sentiment analysis and industry classification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "trafilatura>=2.0.0",
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "fakeredis>=2.26.0",
    "respx>=0.22.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
